feat: update index.html with additional markmap configuration options; streamline settings for enhanced visualization and user experience

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         }
     </style>
 </head>
+<!-- colorFreezeLevel: -1 -->
+<!-- duration: 1000 -->
+<!-- maxWidth: 300 -->
+<!-- initialExpandLevel: -1 -->
+<!-- extraJS: [] -->
+<!-- extraCSS: [] -->
+<!-- zoom: true -->
+<!-- pan: true -->
   
 <body>
     <!-- Wrap Markdown source in `.markmap` elements -->
@@ -21,15 +29,7 @@
         <script type="text/template">
 ---
 markmap:
-    <!-- colorFreezeLevel: -1
-    duration: 1000
-    maxWidth: 300
-    initialExpandLevel: -1 -->
-    <!-- spacingVertical: 20 -->
-    <!-- extraJS: []
-    extraCSS: []
-    zoom: true
-    pan: true -->
+    spacingVertical: 20
 ---
 - **DSA**
     - **Intro**
